--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,14 @@ services:
     ports:
       - 8000:80
     volumes:
-      - ./App/:/var/www/html/
+      - ./:/var/www/html/
+  db:
+    image: mysql:8
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: Qwerty1!
+    volumes:
+      - mysql_eloquent:/var/lib/mysql
+volumes:
+  mysql_eloquent:
